# sk1ds-osint-framework

./: .env.docker  .gitignore  CLAUDE.md  README.md  docker-compose.hub.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
osint-engine/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
osint-engine/generators/: custom_wordlist.py  ip_ranges.py  seclists.py  subdomain_list.py
osint-engine/osint_engine/: __init__.py  auth.py  config.py  generator_loader.py  generator_runner.py  generator_sdk.py  loader.py  main.py  runner.py  sdk.py  slave_client.py
osint-engine/tests/: test_generators.py  test_loader.py  test_main.py  test_runner.py  test_sdk.py  test_slave_client.py  test_transforms.py
osint-engine/transforms/: c99_phone.py  crtsh_subdomains.py  demo_echo.py  demo_split.py  dns_bruteforce.py  dns_resolve.py  dns_reverse.py  domain_tld.py  email_gravatar.py  email_to_domain.py  email_validate.py  feroxbuster.py  http_favicon_hash.py  http_headers.py  http_robots.py  http_security_headers.py  http_title.py  ip_classify.py  ip_geo.py  nmap_scan.py  secrets_scanner.py  snusbase.py  string_b64decode.py  string_entropy.py  string_hashes.py  url_parse.py  url_to_domain.py  whois_lookup.py
osint-web/: .dockerignore  .env.example  .gitignore  Dockerfile  composer.json  docker-entrypoint.sh  email)  package-lock.json
osint-web/app/Jobs/: GenerateReportJob.php  RunSlaveSetupJob.php  (+2 more)
osint-web/bootstrap/: app.php
osint-web/config/: osint.php
osint-web/routes/: web.php
osint-web/tests/: Pest.php
(+118 files in other folders)
