[project]
name = "osint-engine"
version = "0.1.0"
description = "Dynamic transformation engine for the OSINT framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
# Extra libraries that built-in and user transforms may import.
# Users are free to append to this list; nothing in the core engine imports them.
extras = [
    "requests>=2.31",
    "dnspython>=2.4",
    "python-whois>=0.9",
    "beautifulsoup4>=4.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["osint_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
